corpus/c/redefinition/case-01/snapshots/gcc15/dual_sink_structured/subject_blocks_v1/render.default.txt
error: [redefinition] redefinition of 'counter' @ src/main.c:2:5
now : src/main.c:2:5 int counter = 1;
prev: src/main.c:1:5 int counter = 0;
| src/main.c:2:5
| int counter = 1;
|     ^
details: --formed-explain | raw: --formed-raw